resources/css/app.css
:root {
    /* Define color variables */
    --primary-color: #0d629a;
    --secondary-color: #c3e7ff;
    --third-color: #3078c0;
    --text-color: #ffffff;
    --shadow-color: rgba(0, 0, 0, 0.4);
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

#root {
    position: relative;
}

html {
    font-size: 62.5%;
    font-family: "Roboto", "Raleway", "Poppins", sans-serif;
    font-weight: 300;
    font-style: normal;
    width: 100%;
    height: 100%;
    line-height: normal;
    text-rendering: optimizeLegibility;
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    scrollbar-color: var(--primary-color) var(--secondary-color);
    scrollbar-width: 4px !important;
}

::-webkit-scrollbar {
    width: 6px;
    border-radius: 6px;
    height: 0px;
}

::-webkit-scrollbar-track {
    display: none !important;
}

::-webkit-scrollbar-thumb {
    background-color: var(--shadow-color);
    border-radius: 4px;
    height: 0px;
}

body {
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: disc;
    margin-left: 2rem;
}
p {
    margin-bottom: 1rem;
    margin-top: 1rem;
}
.Dialog-careers h4{margin-bottom: 1rem;
    margin-top: 1rem;}
.contact-page p{margin-block: 0 !important;}
.MuiIconButton-root:hover{border-radius: 0 !important;}
.Topbar-section {
    min-height: 55px !important;
}
.d-none {
    display: none !important;
}
.MuiCardActions-root {
    padding: 8px 0 !important;
}
.MuiDivider-root {
    margin-top: 15px !important;
    margin-bottom: 15px !important;
}

.product-details p,
.product-details li {
    margin-bottom: 1rem !important;
    margin-top: 1rem !important;
}
h2 > .ql-size-huge {
    font-size: 4rem !important;
    font-weight: 500 !important;
}
h2 > .ql-size-huge:nth-child(3) {
    font-weight: 700 !important;
}
/* .Footer-section p {
    margin-bottom: 0;
    margin-top: 0;
    color: #ffffff;
} */
.footer-address p{
    margin-bottom: 0;
    margin-top: 0;
    color: #ffffff;
}
.product-name {
    font-size: 16px !important;
    font-weight: 600 !important;
    color: rgba(0, 0, 0, 0.87) !important;
}

li a {
    text-decoration: none;
    color: var(--text-color);
}

.font-bold {
    font-weight: 600;
}

.MuiButtonBase-root:disabled {
    cursor: not-allowed;
    pointer-events: auto;
}
.Service-section-siderbar
    .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected:hover,
.Service-section-siderbar
    .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected:active,
.Service-section-siderbar
    .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected:focus,
.Service-section-siderbar
    .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected:target,
.Service-section-siderbar
    .MuiButtonBase-root.MuiListItem-root.MuiListItem-button.Mui-selected {
    background-color: var(--secondary-color) !important;
}
.serach-drawer-container .MuiDrawer-paper.MuiDrawer-paperAnchorTop {
    max-height: 50%;
    height: 100%;
}

.service-section-content table,
.Service-section table {
    width: 100%;
    border-radius: 4px;
    overflow-x: auto;
    border: 1px solid #666;
    border-collapse: collapse;
}
.service-section-content table tr,
.Service-section table tr {
    border-bottom: 1px solid #666 !important;
}
.service-section-content table th,
.Service-section table th {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    padding: 0.5rem 1rem;
    font-size: 16px !important;
    font-weight: 500 !important;
    border-right: 1px solid #666 !important;
}

.service-section-content table td,
.Service-section table td {
    padding: 0.5rem 1rem;
    border-bottom: 1px solid #666;
    border-right: 1px solid #666;
}
.service-section-content a {
    color: var(--third-color) !important;
    text-decoration: none;
}

/* .Banner-section{
    background-image: url("../js/Site/Assets/new1.jpg");
    background-repeat: no-repeat;
    background-size: cover;
} */
.MuiDataGrid-columnHeaderTitleContainerContent {
    overflow: auto;
}

.MuiButtonBase-root.MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-button.css-dr3m99-MuiButtonBase-root-MuiListItem-root:hover,
.MuiButtonBase-root.MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-button.css-dr3m99-MuiButtonBase-root-MuiListItem-root:hover {
    background-color: var(--secondary-color);
}

.banner-content-text {
    color: var(--primary-color);
    font-family: "Raleway", "Roboto", "Poppins", sans-serif;
    line-height: 1.25;
    width: 60%;
}

.banner-content-text h1 span.ql-size-huge {
    font-size: 4rem;
    font-weight: 500;
}
.banner-content-text h1 strong.ql-size-huge {
    font-size: 4rem;
    font-weight: 900;
}
.banner-content-text p {
    font-size: 1.4rem;
    font-weight: 500;
}
.top-social-icons svg,
.top-social-icons {
    font-size: 2rem;
}
.MuiIconButton-root svg {
    font-size: 2.2rem;
}
.AccountDownloadIcon {
    font-size: 120px !important;
    color: var(--primary-color);
}

.MuiDrawer-root.MuiDrawer-modal.MuiModal-root {
    z-index: 1301;
}
.MuiPopover-root.MuiMenu-root.MuiModal-root {
    z-index: 1305 !important;
}
.page-heading {
    position: relative;
}
.page-heading::after {
    content: " ";
    position: absolute;
    bottom: -10px;
    left: 50%;
    width: 60px;
    border-bottom: 4px solid var(--primary-color);
    transform: translateX(-50%);
}

.cursor-pointer {
    cursor: pointer;
}
.mandatory-product {
    cursor: pointer;
}
.MuiDataGrid-root .MuiDataGrid-columnHeader {
    background-color: var(--secondary-color);
}

/* Home Page All Section CSS */

.about-content ul {
    padding: 0;
    margin: 0;
    list-style: none !important;
}
/* ... */

